# 3_semester_mipt

./: README.md
ILab_second_year/Operations_On_Polygons/: BSPTree.h  BSPTree.hpp  CMakeLists.txt  Work_w_Polygon.h  Work_w_Polygon.hpp  line_2d.h  line_2d.hpp  main.cpp
ILab_second_year/Operations_On_Polygons/Tests/bsp_trees/: pentagon.tex
ILab_second_year/Operations_On_Polygons/Tests/data/: triangle1.txt  triangle10.txt  triangle11.txt  triangle12.txt  triangle13.txt  triangle14.txt  triangle15.txt  triangle16.txt  triangle17.txt  triangle18.txt  triangle19.txt  triangle2.txt  triangle3.txt  triangle4.txt  triangle5.txt  triangle6.txt  triangle7.txt  triangle8.txt  triangle9.txt
ILab_second_year/Operations_On_Polygons/Tests/latex/: First.dot  Firstbsp.dot  Second.dot  Secondbsp.dot  end.dot  firstinsecond.dot  info.tex  secondinfirst.dot
ILab_second_year/Operations_On_Polygons/Tests/res/: 1.txt  10.txt  16.txt  17.txt  18.txt
ILab_second_year/Operations_On_Polygons/Tests/trig_coords_res/: 002.res
ILab_second_year/hbbt/: AVL_Tree.h  AVL_Tree.hpp  CMakeLists.txt  TrackingAllocator.hpp  main.cpp
ILab_second_year/hbbt/trees_with_dot/: 1.dot  2.dot
os_course/fifo_task/: fifo_app.c
os_course/message_queue/: msg_ipc.c
os_course/sem_ synchronization/: sem_synch.c
os_course/server/: main.c
os_course/signals/: main.c
